<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.justapp.groupalarm.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/RName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="20dp"
            android:ems="10"
            android:hint="@string/regName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/REmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/RName"
            android:layout_margin="20dp"
            android:hint="@string/regEmail"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/RPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/REmail"
            android:layout_margin="20dp"
            android:hint="@string/regPassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/RButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/RPassword"
            android:layout_margin="20dp"
            android:text="@string/regSubmit"
            />
        <TextView
            android:id="@+id/RMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RButton"
            android:layout_centerHorizontal="true"
            android:text="@string/register_here" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
