<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.justapp.groupalarm.MainAlarm">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TimePicker
            android:id="@+id/myTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/start_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/myTimePicker"
            android:layout_margin="20dp"
            android:text="@string/set_alarm"
            android:textSize="18sp" />

        <Button
            android:id="@+id/stop_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/myTimePicker"
            android:layout_margin="20dp"
            android:text="@string/delete_alarm"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/alarmStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/stop_alarm"
            android:layout_alignTop="@+id/stop_alarm"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/alarm_is_off" />

        <EditText
            android:id="@+id/labelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignStart="@+id/start_alarm"
            android:layout_below="@+id/alarmStatus"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/label"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/infoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignStart="@+id/start_alarm"
            android:layout_below="@+id/labelText"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/info"
            android:inputType="textPersonName" />

        <View
            android:id="@+id/anchor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignBottom="@+id/saveButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/delButton"
            android:layout_alignBottom="@+id/delButton"
            android:layout_alignStart="@+id/infoText"
            android:layout_marginHorizontal="20dp"
            android:layout_toStartOf="@id/anchor"
            android:text="@string/save" />

        <Button
            android:id="@+id/delButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/infoText"
            android:layout_below="@+id/infoText"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/anchor"
            android:text="@string/delete" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
